apps/jellyfin/base/endpointslice.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin-external
  namespace: media
subsets:
  - addresses:
      - ip: 10.0.1.30
    ports:
      - name: http
        protocol: TCP
        port: 8096
