apps/jellyfin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-external
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8096
      targetPort: 8096
